# Add-A-License

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
add_a_license/: main.py
tests/: test_add_a_license.py
