[tool.poetry]
name = "add_a_license"
version = "0.1.0"
description = ""
authors = ["Bern Carney <18447002+BernCarney@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.1.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
