[tool.poetry]
name = "add-a-license"
version = "0.7.1"
description = ""
authors = ["Bern Carney <18447002+BernCarney@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
aalicense = "add_a_license.main:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.1.1"}
importlib_metadata = "^1.6.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
autoflake = "^1.3.1"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
